Correct deprecated constructors